--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#3C6034</color>
+    <color name="buttons">#41C823</color>
+    <color name="buttonsExit">#E1464A</color>
+    <color name="red">#E1464A</color>
 </resources>
