--- a/app/src/main/res/layout/activity_movimiento.xml
+++ b/app/src/main/res/layout/activity_movimiento.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintVertical_bias="0.01"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_takeCode"
+                android:id="@+id/btn_scan"
                 style="@style/NormalBtnHome"
                 android:text="@string/btn_takeCode"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
                 android:hint="@string/str_code"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_takeCode">
+                app:layout_constraintTop_toBottomOf="@+id/btn_scan">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/InputCodigo"
                     android:layout_width="match_parent"
@@ -93,6 +93,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_ingreso"
+                android:checked="true"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtMedida" />
@@ -129,9 +130,9 @@
                 app:layout_constraintTop_toBottomOf="@id/BoxCantidad" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_salir"
+                android:id="@+id/btn_regresar"
                 style="@style/ExitBtnHome"
-                android:text="@string/btn_exit"
+                android:text="@string/btn_regresar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_guardar" />
