--- a/app/src/main/res/layout/activity_new_product.xml
+++ b/app/src/main/res/layout/activity_new_product.xml
@@ -1,142 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".NewProductActivity">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="120dp"
-        android:layout_height="100dp"
-        android:src="@drawable/logo"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.01"/>
-
-    <ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/imageView">
+        android:layout_height="match_parent"
+        tools:context=".NuevoProductoActivity">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="120dp"
+            android:layout_height="100dp"
+            android:src="@drawable/logo"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.01"/>
+
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageView">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_takeCode"
-                style="@style/NormalBtnHome"
-                android:text="@string/btn_takeCode"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/BoxCodigo"
-                style="@style/NormalInput"
-                android:hint="@string/str_code"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_takeCode">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/BoxCodigo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </com.google.android.material.textfield.TextInputEditText>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/BoxProd"
-                style="@style/NormalInput"
-                android:hint="@string/str_prod"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/BoxCodigo">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/InputProd"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </com.google.android.material.textfield.TextInputEditText>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/BoxCat"
-                style="@style/NormalInput"
-                android:hint="@string/str_cat"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/BoxProd">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/InputCat"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </com.google.android.material.textfield.TextInputEditText>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/BoxAlm"
-                style="@style/NormalInput"
-                android:hint="@string/str_alm"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/BoxCat">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/InputAlm"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </com.google.android.material.textfield.TextInputEditText>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/BoxMed"
-                style="@style/NormalInput"
-                android:hint="@string/str_med"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/BoxAlm">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/InputMed"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                </com.google.android.material.textfield.TextInputEditText>
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_guardar"
-                style="@style/NormalBtnHome"
-                android:layout_width="120dp"
-                android:text="@string/btn_guardar"
-                app:layout_constraintStart_toStartOf="@id/BoxMed"
-                app:layout_constraintTop_toBottomOf="@+id/BoxMed" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_regresar"
-                style="@style/ExitBtnHome"
-                android:layout_width="120dp"
-                android:text="@string/btn_regresar"
-                app:layout_constraintEnd_toEndOf="@id/BoxMed"
-                app:layout_constraintTop_toBottomOf="@+id/BoxMed" />
-
-            <TextView
-                android:id="@+id/txtError"
-                android:layout_width="wrap_content"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/btn_regresar" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_marginBottom="40dp">
 
-    </ScrollView>
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_scan"
+                    style="@style/NormalBtnHome"
+                    android:text="@string/btn_takeCode"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/BoxCodigo"
+                    style="@style/NormalInput"
+                    android:hint="@string/str_code"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/btn_scan">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/InputCodigo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/BoxProd"
+                    style="@style/NormalInput"
+                    android:hint="@string/str_prod"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/BoxCodigo">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/InputProd"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/BoxCat"
+                    style="@style/NormalInput"
+                    android:hint="@string/str_cat"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/BoxProd">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/InputCat"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/BoxAlm"
+                    style="@style/NormalInput"
+                    android:hint="@string/str_alm"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/BoxCat">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/InputAlm"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/BoxMed"
+                    style="@style/NormalInput"
+                    android:hint="@string/str_med"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/BoxAlm">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/InputMed"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </com.google.android.material.textfield.TextInputEditText>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_guardar"
+                    style="@style/NormalBtnHome"
+                    android:layout_width="120dp"
+                    android:text="@string/btn_guardar"
+                    app:layout_constraintStart_toStartOf="@id/BoxMed"
+                    app:layout_constraintTop_toBottomOf="@+id/BoxMed" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btn_regresar"
+                    style="@style/ExitBtnHome"
+                    android:layout_width="120dp"
+                    android:text="@string/btn_regresar"
+                    app:layout_constraintEnd_toEndOf="@id/BoxMed"
+                    app:layout_constraintTop_toBottomOf="@+id/BoxMed" />
+
+                <TextView
+                    android:id="@+id/txtError"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btn_regresar" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
