--- a/app/src/main/res/layout/activity_stock.xml
+++ b/app/src/main/res/layout/activity_stock.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintVertical_bias="0.01"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_takeCode"
+                android:id="@+id/btn_scan"
                 style="@style/NormalBtnHome"
                 android:text="@string/btn_takeCode"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +43,7 @@
                 android:hint="@string/str_code"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_takeCode">
+                app:layout_constraintTop_toBottomOf="@+id/btn_scan">
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/InputCodigo"
                     android:layout_width="match_parent"
@@ -90,9 +90,9 @@
                 app:layout_constraintEnd_toEndOf="parent"/>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_salir"
+                android:id="@+id/btn_regresar"
                 style="@style/ExitBtnHome"
-                android:text="@string/btn_exit"
+                android:text="@string/btn_regresar"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtStock" />
